# MDK

./: .gitignore  README.md  SPEC.md  pyproject.toml  tMUGEN Standard.md
.github/: copy_binary.py
.github/workflows/: build-wheel.yml
mdk/: README.md
mdk-csharp/: Attributes.cs  CNSGenerator.cs  mdk-csharp.csproj  mdk-csharp.sln
mdk-csharp-tests/: Program.cs  mdk-csharp-tests.csproj
mdk-python/: README.md  TUTORIAL.md  devils_eye.py  mdkair.py  pyproject.toml  superarmor.inc  superarmor.mtl  unit_test.py
mdk-python/examples/includes/: superarmor.py
mdk-python/examples/superarmor/: superarmor.py  validator.py
mdk-python/mdk/: compiler.py
mdk-python/mdk-stubs/: compiler.pyi
mdk-python/mdk-stubs/resources/: animation.pyi
mdk-python/mdk-stubs/stdlib/: __init__.pyi  animation.pyi  controllers.pyi  redirects.pyi  triggers.pyi
mdk-python/mdk-stubs/types/: __init__.pyi  builtins.pyi  context.pyi  defined.pyi  enums.pyi  errors.pyi  expressions.pyi  specifier.pyi  variables.pyi
mdk-python/mdk-stubs/utils/: compiler.pyi  controllers.pyi  expressions.pyi  shared.pyi  triggers.pyi
mdk-python/mdk/resources/: animation.py
mdk-python/mdk/stdlib/: __init__.py  animation.py  controllers.py  redirects.py  triggers.py
mdk-python/mdk/types/: __init__.py  builtins.py  context.py  defined.py  definitions.py  enums.py  errors.py  expressions.py  specifier.py  triggers.py  variables.py
mdk-python/mdk/utils/: animation.py  compiler.py  controllers.py  expressions.py  sff.py  shared.py  triggers.py
mdk/python/: README.md
mtlcc/: DEBUGGER.md  README.md  SPEC.md  TRANSLATION.md  mtlcc.py  mtldbg.py  pyproject.toml
mtlcc/asm/1.0/: breakpoint.asm  passpoint.asm
mtlcc/asm/1.1a4/: breakpoint.asm  passpoint.asm
mtlcc/asm/1.1b1/: breakpoint.asm  passpoint.asm
mtlcc/asm/win/: breakpoint.asm  passpoint.asm
mtlcc/mtl/: builtins.py  error.py  loader.py  project.py  shared.py  translator.py  utils.py  writer.py
mtlcc/mtl/debugging/: address.py  cli_function.py  commands.py  common_function.py  database.py  ipc_code.py  ipc_function.py  process.py
mtlcc/mtl/debugging/asmbin/: breakpoint_11b1.py
mtlcc/mtl/parser/: ini.py  trigger.py
mtlcc/mtl/parsers/: ini.py  trigger.py
mtlcc/mtl/types/: builtins.py  context.py  debug.py  debugging.py  ini.py  shared.py  translation.py  trigger.py
mtlcc/mtl/utils/: binary.py  checker.py  compiler.py  constant.py  conversion.py  debug.py  func.py
mtlcc/preserve/mtl/: builtins.py  shared.py  utils.py
mtlcc/sample/: kfm.cns  kfm.generated.cns  kfm.mtl  test.mtl
mtlcc/sample/UnitTest/: UnitTest.commands.mtl  UnitTest.def  UnitTest.generated.cns  UnitTest.states0.mtl  UnitTest.states1.mtl
mtlcc/sample/UnitTest/UnitTest.CNS/: UnitTest.commands  UnitTest.constants  UnitTest.def  UnitTest.mdbg  UnitTest.st
mtlcc/sample/UnitTest/system/: UnitTest.cns
mtlcc/stdlib/: common1.mtl  libmtl.inc
preserve/python/: README.md
preserve/tmcc/: tmcc.py
python/: common1.cns  common1.py  example.py
python/examples/: common1.cns  common1.py  dek.cns  dek.py
python/mdk/: __init__.py  controllers.py  state.py  triggers.py  types.py  utils.py  vars.py
tmcc/: README.md
vscode-mtldbg-extension/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
(+12 files in other folders)
