[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["mtl/*", "stdlib", "mtlcc.py", "mtldbg.py"]

[project]
name = "mtl"
version = "0.0.1"
authors = [
  { name="Ziddia", email="ziddia1@gmail.com" },
]
description = "MUGEN Template Language SDK, Compiler, and Debugger"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]